--- a/app/src/main/res/layout/fragment_play.xml
+++ b/app/src/main/res/layout/fragment_play.xml
@@ -303,6 +303,7 @@
 
         <EditText
             android:id="@+id/edtTempos"
+            android:nextFocusRight="@+id/edtBPM"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="2"
